# AccumulationSpace

./: .clang-format  .gitignore  .gitigonre  .gitmodules  .qglviewer.xml  CMakeCache.txt  CMakeLists.txt  LICENSE  README  README.md  accumulation.longvol  am_beech2-3.Acc.vol  am_beech2-3.Conf.vol  confidence.longvol  execute.sh  genAccConf.sh  helloworld  helloworld.cpp  main.cpp  radius.longvol  showAccMesh.sh  spotTest.sh  test_displayACM.sh  test_genACMap.sh  test_scaleInputMesh.sh
cmake/: dgtal.cmake  polyscope.cmake
expe/: AccVoxel.h
include/: AccumulationAlgorithms.h  Common.h  Curvature.h  Denoise.h  Timer.h
samples/: .qglviewer.xml  am_beech2-2.off  am_beech2-3.off  am_beech2-3.off_colored.off  model-s200.off  model-s25.off  model-s50.off  model.off  spot~s21r15t20_AccColored.mtl
src/: AccVoxel.h  AccVoxelHelper.h  AccumulationAlgorithms.h  AccumulationAlgorithms.ipp  AccumulationSpace.cpp  AccumulationSpace.h  AccumulationSpace.ipp  AccumulatorHelper.h  Curvature.ipp  Denoise.h  Menu.h  NormalAccumulator  PolyscopeEnvironment.h  PolyscopeEnvironment.ipp  Timer.h
tools/: 3dSDPViewer.cpp  3dVolViewer.cpp  CMakeLists.txt  compAccFromMesh.cpp  meshViewer.cpp  polyAccEdit.cpp  polyMeshEdit.cpp
